commit 6 fixed small bugs on smaller displays.

--- a/css/phone.css
+++ b/css/phone.css
@@ -95,7 +95,7 @@
     font-family: 'Lobster', cursive;
 }
 #profile-pic{
-    max-width: 15rem;
+    max-width: 12rem;
     margin-left: 0;
     margin: 0 0;
 }
@@ -132,4 +132,7 @@
 }
 .social{
     display: none;
+}
+.achievement{
+    flex-wrap: unset;
 }
